[package]
name = "thvote-votedata"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jwt-simple = {git = "https://github.com/zyddnys/rust-jwt-simple.git"}
serde = { version = "1.0", features = ["derive"] }
actix-web = "4.0.0-beta.9"
bson = "1.2.2"
rust-argon2 = "0.8"
rand = "0.8"
chrono = "0.4"
base64 = "0.13.0"
md-5 = "0.9.1"
hex = "0.4.3"
serde_json = "1.0"
bcrypt = "0.10"

[dependencies.mongodb]
version = "1.2.0"
default-features = false
features = ["async-std-runtime"]
